# cipherkit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cipherkit.h  cipherkit.pc  cipherkit.pc.in  crypto.c  crypto.h  gzip.c  jwt.c  jwt.h  logging.h
docs/: crypto.md  gzip.md  jwt.md
include/: cipherkit.h  gzip.h  jwt.h
src/: crypto.c  gzip.c  jwt.c
tests/: crypto_test.c  gzip_test.c  jwt_test.c
